--- a/homework/app/src/main/AndroidManifest.xml
+++ b/homework/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         <activity android:name=".UploadActivity"
             android:screenOrientation="portrait"
             />
+        <activity android:name=".socket.SocketActivity"
+            android:screenOrientation="portrait"
+            />
     </application>
 
 </manifest>
